--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 header{
-	color: red;
+	text-align: center;
 }
 nav{
-	background-color: lightgray;
-	height: 100px;
+	text-align: center;
+	color: white;
+	height: 60px;
 }
-body {
-	color: red;
+.contents{
+	
 }
