--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@ h3{
 	color: #4287f5;
 }
 
+#foto_start {
+	border-radius: 8px;
+	border: solid;
+	width: 50%;
+}
+
 .aanwijzing_box {
 	display: flex;
 	flex-wrap: wrap;
@@ -30,6 +36,22 @@ h3{
 	color: white;
 }
 
+.volgende_aanwijzing{
+	background-color: #f7f7f7;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    border: none;
+    font-size: 20px;
+    text-align: center;
+    color: #4287f5;
+}
+
+.volgende_aanwijzing:hover{
+	background-color: #4287f5;
+	color: white;
+}
+
 .pagina {
 	background-color: #f7f7f7;
     font-size: 20px;
@@ -44,3 +66,13 @@ h3{
     padding: 20px;
     border-radius: 8px;
 }
+
+.footer_bar {
+	background-color: lightgray;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    color: #4287f5;
+    text-align: center;
+}
+
