Verbeterde volgende aanwijzing knoppen

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,23 @@ h3 {
   color: white;
 }
 
+.volgende_aanwijzing {
+  background-color: #f7f7f7;
+  border: none;
+  border-radius: 8px;
+  font-size: 20px;
+  margin: 20px;
+  padding: 20px;
+  width: 500px;
+  text-align: center;
+  color: #4287f5;
+}
+
+.volgende_aanwijzing:hover {
+  background-color: #4287f5;
+  color: white;
+}
+
 .pagina {
   background-color: #f7f7f7;
   font-size: 20px;
