Foto op homepage

--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,13 @@ h3{
 #foto_start {
 	border-radius: 8px;
 	border: solid;
-	width: 50%;
+	width: 75%;
+}
+
+.foto {
+	border-radius: 8px;
+	border: solid;
+	width: 75%;
 }
 
 .foto_aanwijzing {
