--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ h3 {
   width: 75%;
 }
 
+.foto {
+  border-radius: 8px;
+  border: solid;
+  width: 75%;
+}
+
 .foto_aanwijzing {
   border-radius: 8px;
   border: solid;
