Terug naar vorige aanwijzing knop

--- a/styles.scss
+++ b/styles.scss
@@ -42,7 +42,7 @@ h3{
     font-size: 20px;
     margin: 20px;
     padding: 20px;
-    width: 200px;
+    width: 50%;
     text-align: center;
     color: $color_primary;
 }
