--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ h3 {
   font-size: 20px;
   margin: 20px;
   padding: 20px;
-  width: 200px;
+  width: 50%;
   text-align: center;
   color: #4287f5;
 }
