--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ h3 {
   font-size: 20px;
   margin: 20px;
   padding: 20px;
-  width: 50%;
+  width: 500px;
   text-align: center;
   color: #4287f5;
 }
