--- a/styles.scss
+++ b/styles.scss
@@ -5,23 +5,26 @@ $color_tertiary: #f7f7f7;
 header{
 	text-align: center;
 	margin: 30px;
-	color: $color_primary;
 }
 
-h3{
+h3, header{
 	color: $color_primary;
+}
+tr, td{
+	text-align: center;
+	background: $color_tertiary;
 }
 
 #foto_start {
 	border-radius: 8px;
 	border: solid;
-	width: 75%;
+	width: 100%;
 }
 
 .foto {
 	border-radius: 8px;
 	border: solid;
-	width: 75%;
+	width: 100%;
 }
 
 .foto_aanwijzing {
