--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,34 @@ header {
   text-align: center;
   margin: 30px;
 }
+header h1 {
+  font-weight: bold;
+}
 
 h3, header {
   color: #4287f5;
 }
 
-tr, td {
-  text-align: center;
-  background: #f7f7f7;
-}
+@media (min-width: 500px) {
+  table {
+    width: 100%;
+  }
 
+  tr, td {
+    text-align: center;
+    border: solid 1px;
+    border-collapse: collapse;
+  }
+
+  tr {
+    border: solid 2px;
+    padding: 5px;
+  }
+
+  th {
+    color: #4287f5;
+  }
+}
 #foto_start {
   border-radius: 8px;
   border: solid;
@@ -63,7 +81,7 @@ tr, td {
 
 .pagina {
   background-color: #f7f7f7;
-  font-size: 20px;
+  font-size: 18px;
   margin: 20px;
   padding: 20px;
   border-radius: 8px;
