--- a/styles.scss
+++ b/styles.scss
@@ -5,15 +5,39 @@ $color_tertiary: #f7f7f7;
 header{
 	text-align: center;
 	margin: 30px;
+	h1{
+		font-weight: bold;
+	}
 }
 
 h3, header{
 	color: $color_primary;
 }
-tr, td{
-	text-align: center;
-	background: $color_tertiary;
+
+@media (min-width: 500px){
+	table {
+		width: 100%;
+	}
+
+	tr, td{
+		text-align: center;
+		border: solid 1px;
+		border-collapse: collapse;
+	}
+
+	tr {
+		border: solid 2px;
+		padding: 5px;
+	}
+
+	th{
+		color: $color_primary;
+	}
 }
+@media (max-width: 499px){
+	
+}
+
 
 #foto_start {
 	border-radius: 8px;
@@ -67,7 +91,7 @@ tr, td{
 
 .pagina {
 	background-color: $color_tertiary;
-    font-size: 20px;
+    font-size: 18px;
     margin: 20px;
     padding: 20px;
     border-radius: 8px;
