--- a/styles.css
+++ b/styles.css
@@ -10,26 +10,27 @@ h3, header {
   color: #4287f5;
 }
 
-table {
-  width: 100%;
-}
+@media screen and (min-width: 500px) {
+  table {
+    width: 100%;
+  }
 
-tr, td {
-  text-align: center;
-  border: solid 1px;
-  border-collapse: collapse;
-}
+  tr, td {
+    text-align: center;
+    border: solid 1px;
+    border-collapse: collapse;
+  }
 
-tr {
-  border: solid 2px;
-  padding: 5px;
-}
+  tr {
+    border: solid 2px;
+    padding: 5px;
+  }
 
-th {
-  color: #4287f5;
+  th {
+    color: #4287f5;
+  }
 }
-
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 499px) {
   #aanwijzingen_tabel {
     display: none;
   }
