--- a/styles.scss
+++ b/styles.scss
@@ -14,26 +14,28 @@ h3, header{
 	color: $color_primary;
 }
 
-table {
-	width: 100%;
+@media screen and (min-width: 500px){
+	table {
+		width: 100%;
+	}
+
+	tr, td{
+		text-align: center;
+		border: solid 1px;
+		border-collapse: collapse;
+	}
+
+	tr {
+		border: solid 2px;
+		padding: 5px;
+	}
+
+	th{
+		color: $color_primary;
+	}
 }
 
-tr, td{
-	text-align: center;
-	border: solid 1px;
-	border-collapse: collapse;
-}
-
-tr {
-	border: solid 2px;
-	padding: 5px;
-}
-
-th{
-	color: $color_primary;
-}
-
-@media screen and (max-width: 500px){
+@media screen and (max-width: 499px){
 	#aanwijzingen_tabel {
 		display: none;
 	}
