--- a/styles.scss
+++ b/styles.scss
@@ -15,6 +15,16 @@ h3, header{
 }
 
 @media screen and (min-width: 500px){
+	#aanwijzingen_tabel {
+		display:normal;
+	}
+}
+
+@media screen and (max-width: 499px){
+	#aanwijzingen_tabel {
+		display: none;
+	}
+	
 	table {
 		width: 100%;
 	}
@@ -32,12 +42,6 @@ h3, header{
 
 	th{
 		color: $color_primary;
-	}
-}
-
-@media screen and (max-width: 499px){
-	#aanwijzingen_tabel {
-		display: none;
 	}
 }
 
