--- a/styles.css
+++ b/styles.css
@@ -10,33 +10,33 @@ h3, header {
   color: #4287f5;
 }
 
+table {
+  width: 100%;
+}
+
+tr, td {
+  text-align: center;
+  border: solid 1px;
+  border-collapse: collapse;
+}
+
+tr {
+  border: solid 2px;
+  padding: 5px;
+}
+
+th {
+  color: #4287f5;
+}
+
 @media screen and (min-width: 500px) {
-  #aanwijzingen_tabel {
-    display: normal;
+  #alert_scherm {
+    display: block;
   }
 }
 @media screen and (max-width: 499px) {
-  #aanwijzingen_tabel {
+  #alert_scherm {
     display: none;
-  }
-
-  table {
-    width: 100%;
-  }
-
-  tr, td {
-    text-align: center;
-    border: solid 1px;
-    border-collapse: collapse;
-  }
-
-  tr {
-    border: solid 2px;
-    padding: 5px;
-  }
-
-  th {
-    color: #4287f5;
   }
 }
 #foto_start {
