--- a/styles.scss
+++ b/styles.scss
@@ -14,37 +14,36 @@ h3, header{
 	color: $color_primary;
 }
 
+table {
+	width: 100%;
+}
+
+tr, td{
+	text-align: center;
+	border: solid 1px;
+	border-collapse: collapse;
+}
+
+tr {
+	border: solid 2px;
+	padding: 5px;
+}
+
+th{
+	color: $color_primary;
+}
+
 @media screen and (min-width: 500px){
-	#aanwijzingen_tabel {
-		display:normal;
+	#alert_scherm {
+		display:block;
 	}
 }
 
 @media screen and (max-width: 499px){
-	#aanwijzingen_tabel {
+	#alert_scherm {
 		display: none;
 	}
-	
-	table {
-		width: 100%;
-	}
-
-	tr, td{
-		text-align: center;
-		border: solid 1px;
-		border-collapse: collapse;
-	}
-
-	tr {
-		border: solid 2px;
-		padding: 5px;
-	}
-
-	th{
-		color: $color_primary;
-	}
 }
-
 
 #foto_start {
 	border-radius: 8px;
