final commit zonder werkende media queries

--- a/styles.scss
+++ b/styles.scss
@@ -34,13 +34,13 @@ th{
 }
 
 @media screen and (min-width: 500px){
-	#alert_scherm {
+	#aanwijzingen_tabel {
 		display:block;
 	}
 }
 
 @media screen and (max-width: 499px){
-	#alert_scherm {
+	#aanwijzingen_tabel {
 		display: none;
 	}
 }
