--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,12 @@ th {
 }
 
 @media screen and (min-width: 500px) {
-  #alert_scherm {
+  #aanwijzingen_tabel {
     display: block;
   }
 }
 @media screen and (max-width: 499px) {
-  #alert_scherm {
+  #aanwijzingen_tabel {
     display: none;
   }
 }
