--- a/styles.scss
+++ b/styles.scss
@@ -35,13 +35,16 @@ th{
 
 @media screen and (min-width: 500px){
 	#aanwijzingen_tabel {
-		display:block;
+		visibilty:normal;
 	}
 }
 
 @media screen and (max-width: 499px){
 	#aanwijzingen_tabel {
-		display: none;
+		visibility:hidden;
+	}
+	#box_aanwijzingen_tabel{
+		visibility:hidden;
 	}
 }
 
@@ -115,4 +118,3 @@ th{
     color: $color_primary;
     text-align: center;
 }
-
